# learnopengl-rs

./: Cargo.toml  README.md
examples/: coordinate_systems.rs  hello_triangle.rs  hello_triangle_ex1.rs  hello_triangle_ex2.rs  hello_triangle_ex3.rs  hello_triangle_indexed.rs  shaders.rs  shaders_ex1.rs  shaders_ex2.rs  shaders_ex3.rs  textures.rs  textures_ex1.rs  textures_ex2.rs  textures_ex4.rs  textures_multi.rs  transformations.rs  transformations_ex2.rs
res/shaders/: coordinate_systems.vs  shaders_ex2.vs  textures_ex1.fs  textures_ex4.fs  textures_multi.fs  transformations.vs
src/: glutin.rs  lib.rs  shaders.rs  textures.rs  vao.rs
