[package]
name = "learnopengl-rs"
version = "0.1.0"
authors = ["Brieuc Desoutter <brieuc.desoutter@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
gl = "0.14.0"
glutin = "0.26.0"
image = "0.23.14"
nalgebra = "0.25.4"